# server/internal/httpapi/httpapi.go
@@ -67,7 +67,10 @@ func New(svc *service.Service, hub *events.Hub, token string, static fs.FS, log 
 		r.Get("/banks", a.appBanks)
 		r.Get("/sync/questions", a.syncQuestions)
 		r.Get("/sync/states", a.syncStatesDown)
+		r.Get("/sync/attempts", a.syncAttemptsDown)
 		r.Post("/sync/attempts", a.syncAttemptsUp)
+		r.Get("/sync/exams", a.syncExamsDown)
+		r.Post("/sync/exams", a.syncExamsUp)
 		r.Post("/sync/states", a.syncStatesUp)
 		r.Get("/sync/sessions", a.syncSessionsDown)
 		r.Post("/sync/sessions", a.syncSessionsUp)
